# resumatica

./: .gitignore  README.md  main.py  pyproject.toml  resume.yaml
.zed/: settings.json
resumes/: resume.yaml
templates/: classic.jinja
templates/classes/: classic.cls
